# seoultrips

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  place_name.csv  pyproject.toml  requirements.txt  seoul_sigungu_codes.csv
db/: Dockerfile
db/init/: albatrips_dump.sql  seoultrips.sql
server/: app.py  utils.py
server/api/: image_upload.py  location.py  quest.py  recommend.py  related.py  visitor.py
server/services/: client.py  korea_tour_api.py  quest_generate.py
server/static/css/: styles.css
server/static/js/: main.js
server/templates/: base.html  category.html  custom.html  customBack.html  index.html  initial.html  naver_map.html  quest_course.html  quest_detail.html  recommend.html
