[project]
name = "seoultrips"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "langchain-google-genai>=2.1.5",
    "langgraph>=0.4.8",
    "mysql>=0.0.3",
    "mysql-connector-python>=9.3.0",
    "pandas>=2.3.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "uvicorn[standard]>=0.34.3",
    "pandas>=2.3.0",
    "langchain-openai>=0.3.26",
]
